--- a/cpp_course_assignments/absolute_difference/absolute_difference.vcxproj
+++ b/cpp_course_assignments/absolute_difference/absolute_difference.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{7900e11a-5a10-4ff5-96f9-56ea64991c6c}</ProjectGuid>
     <RootNamespace>absolutedifference</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>absolute_difference_easy</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
